--- a/TTT_CLRSolution/TTT_CLR/TTT_CLR.vcxproj.filters
+++ b/TTT_CLRSolution/TTT_CLR/TTT_CLR.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="Server.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
